# azure-hello

./: .dockerignore  Dockerfile  README.md  app.py  azure_state.py  db.py  deploy.py  deploy_instance.py  env.sh  main.py  push_container.py  pyproject.toml  ui.py
docs/: init.md
sql/: create_user.sql  query_users.sql  show.sql  users.sql
src/azure_hello/: __init__.py  client.py  main_ui.py  migrate.py
